[tool.poetry]
name = "hmp-check"
version = "0.1.0"
description = "Julio learning some hyper modern Python stuf"
authors = ["juliopdx <juliop503@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/juliopdx/hmp-check"
repository = "https://github.com/juliopdx/hmp-check"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hmp-check = "hmp_check.console:main"
